test/invalid/struct_unfinished.d
//T error: struct_unfinished.d:5:0:
//T error: expected CloseBrace, not the end of the file.

struct S {
